# semanticworkbench

./: .dockerignore  .gitignore  AI_CONTEXT_INVESTIGATION.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  Makefile  PR_DESCRIPTION.md  README.md  RESPONSIBLE_AI_FAQ.md  SECURITY.md  SUPPORT.md  TASK_TOOL_INVESTIGATION.md  azure.yaml  pr_description.md  ruff.toml  semantic-workbench.code-workspace
assistants/codespace-assistant/: README.md  assistant.code-workspace  pyproject.toml
assistants/codespace-assistant/.claude/: settings.local.json
assistants/codespace-assistant/assistant/: chat.py  config.py  document_inspector.py  helpers.py
assistants/document-assistant/: CLAUDE.md  README.md  assistant.code-workspace  pyproject.toml
assistants/document-assistant/assistant/: chat.py  config.py  types.py
assistants/document-assistant/tests/: test_convert.py
assistants/explorer-assistant/: README.md  assistant.code-workspace  pyproject.toml
assistants/explorer-assistant/assistant/: chat.py  config.py  helpers.py
assistants/explorer-assistant/explorer_assistant/: chat.py
assistants/guided-conversation-assistant/: README.md  assistant.code-workspace  pyproject.toml
assistants/guided-conversation-assistant/assistant/: chat.py  config.py
assistants/project-assistant/: CLAUDE.md  Makefile  README.md  all_tests_output.txt  artifact_loading_output.txt  knowledge-transfer-assistant.code-workspace  project-assistant.code-workspace  pyproject.toml  setup_mode_output.txt  team_mode_output.txt  test_inspector.py  test_output.txt
assistants/project-assistant/assistant/: __init__.py  assistant.py  chat.py  command_processor.py  config.py  context_types.py  conversation_clients.py  conversation_project_link.py  coordinator_mode.py  data.py  files.py  logging.py  notifications.py  project.py  project_analysis.py  project_common.py  project_data.py  project_files.py  project_manager.py  project_notifications.py  project_storage.py  project_tools.py  prompt_utils.py  respond.py  state_inspector.py  storage.py  string_utils.py  team_mode.py  team_welcome.py  tools.py  utils.py
assistants/project-assistant/docs/: CLAUDE_PROMPTS.md  DESIGN.md  DEV_GUIDE.md  JTBD.md  UPDATED_WORK_PLAN.md  WORKBENCH_NOTES.md  WORKING.md  WORK_PLAN.md  how-kta-works.md  learning_assistance.md
assistants/project-assistant/tests/: test_artifact_loading.py  test_artifact_messaging.py  test_inspector.py  test_invitation_system.py  test_project_manager.py  test_project_storage.py  test_project_tools.py  test_setup_mode.py  test_share_manager.py  test_share_storage.py  test_share_tools.py  test_team_mode.py
assistants/prospector-assistant/: Dockerfile  Makefile  README.md  assistant.code-workspace  gc_learnings.md  pyproject.toml
assistants/prospector-assistant/assistant/: __init__.py  chat.py  config.py  legacy.py
assistants/prospector-assistant/gc_learnings/: gc_learnings.md
assistants/skill-assistant/: .env.example  Dockerfile  Makefile  README.md  assistant.code-workspace  pyproject.toml  pytest.ini
assistants/skill-assistant/assistant/: __init__.py  assistant_registry.py  config.py  logging.py  skill_assistant.py  skill_controller.py  skill_engine_registry.py  skill_event_mapper.py  storage.py  workbench_helpers.py
assistants/skill-assistant/tests/: test_setup.py
examples/python-01-echo-bot/: README.md  assistant.code-workspace  pyproject.toml
examples/python-01-echo-bot/assistant/: chat.py  config.py
examples/python-02-simple-chatbot/: .flake8  README.md  assistant.code-workspace  pyproject.toml
examples/python-02-simple-chatbot/assistant/: chat.py  config.py
examples/python-03-multimodel-chatbot/: README.md  assistant.code-workspace  pyproject.toml
examples/python-03-multimodel-chatbot/assistant/: chat.py  config.py  model_adapters.py
examples/python-03-prospector-assistant/: assistant.code-workspace  pyproject.toml
examples/python-03-prospector-assistant/assistant/: chat.py
examples/python/python-01-echo-bot/: .env.example  Makefile  README.md  assistant.code-workspace  pyproject.toml
examples/python/python-02-simple-chatbot/: Makefile  README.md  assistant.code-workspace  pyproject.toml
mcp-servers/mcp-server-bing-search/: .env.example  .gitignore  README.md  pyproject.toml
mcp-servers/mcp-server-bundle/: Makefile  README.md  macos.spec  pyinstaller.spec  pyproject.toml  windows.spec
mcp-servers/mcp-server-coder/: ASSISTANT_BOOTSTRAP.md  Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-filesystem/: Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-filesystem-edit/: .env.example  Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-giphy/: .env.example  Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-memory-user-bio/: .gitignore  Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-memory-whiteboard/: .env.example  Makefile  README.md  pyproject.toml
mcp-servers/mcp-server-office/: .env.example  Makefile  README.md  build.sh  mcp-server-office.spec  pyinstaller.spec  pyproject.toml
mcp-servers/mcp-server-open-deep-research/: .env.example  README.md  pyproject.toml
mcp-servers/mcp-server-research/: .env.example  README.md  pyproject.toml
mcp-servers/mcp-server-web-research/: .env.example  README.md  pyproject.toml
mcp-servers/mcp-server-word/: .env.example  pyproject.toml
user-examples/openai-assistant/: .env.example  README.md  openai-assistant.code-workspace  pyproject.toml
user-examples/quickstart-assistant/: .black.toml  pyproject.toml
workbench-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.aspire  Makefile  README.md  alembic.ini  pyproject.toml
workbench-service/scripts/: docker-entrypoint.sh
workbench-service/semantic_workbench_service/: __init__.py  api.py  assistant_api_key.py  auth.py  azure_speech.py  config.py  db.py  logging_config.py  middleware.py  query.py  service.py  service_user_principals.py  start.py
workbench-service/tests/: conftest.py  docker-compose.yaml  test_files.py  test_integration.py  test_middleware.py  test_workbench_service.py  types.py
(+2218 files in other folders)
