[tool.poetry]
name = "semantic-workbench-service"
version = "0.1.0"
description = "Library for facilitating the implementation of FastAPI-based Semantic Workbench essistants."
authors = ["Semantic Workbench Team"]
readme = "README.md"
packages = [{ include = "semantic_workbench_service" }]

[tool.poetry.dependencies]
python = "~3.11"
aiosqlite = "~0.20.0"
alembic = "~1.13.1"
asgi-correlation-id = "^4.3.1"
asyncpg = "~0.29.0"
azure-keyvault-secrets = "^4.8.0"
azure-identity = "^1.16.0"
azure-core = { version = "*", extras = ["aio"] }
cachetools = "^5.3.3"
fastapi = { version = "~0.115.0", extras = ["standard"] }
greenlet = "~3.0.3"
jsonschema = "^4.20.0"
openai = "~1.14.2"
pydantic-settings = "^2.2.0"
python-dotenv = "~1.0.0"
python-jose = { version = "*", extras = ["cryptography"] }
python-json-logger = "^2.0.7"
rich = "^13.7.0"
semantic-workbench-api-model = { path = "../semantic-workbench-api-model", develop = true }
sqlmodel = "~0.0.14"
sse-starlette = "~1.8.2"

[tool.poetry.group.dev.dependencies]
# semantic-workbench-assistant is used for integration tests
semantic-workbench-assistant = { path = "../semantic-workbench-assistant", develop = true }
asgi-lifespan = "^2.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5.post1"
pytest-docker = "^3.1.1"
pytest-httpx = "^0.30.0"
ruff = "^0.6.4"

[tool.poetry.scripts]
start-semantic-workbench-service = "semantic_workbench_service.start:main"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["venv", ".venv"]
