[project]
name = "explorer-assistant"
version = "0.1.0"
description = "A python Semantic Workbench OpenAI assistant for exploring capabilities."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepmerge>=2.0",
    "html2docx>=1.6.0",
    "markdown>=3.6",
    "openai>=1.3.9",
    "content-safety>=0.1.0",
    "chat-driver>=0.1.0",
    "skill-library>=0.1.0",
    "posix-skill>=0.1.0",
    "prospector-skill>=0.1.0",
    "document-skill>=0.1.0",
    "guided-conversation>=0.1.0",
    "openai-client>=0.1.0",
    "assistant-extensions[attachments]>=0.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
content-safety = { path = "../../libraries/python/content-safety/", editable = true }
guided-conversation = { path = "../../libraries/python/guided-conversation", editable = true }
chat-driver = { path = "../../libraries/python/chat-driver", editable = true }
skill-library = { path = "../../libraries/python/skills/skill-library", editable = true }
posix-skill = { path = "../../libraries/python/skills/skills/posix-skill", editable = true }
prospector-skill = { path = "../../libraries/python/skills/skills/prospector-skill", editable = true }
document-skill = { path = "../../libraries/python/skills/skills/document-skill", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }
assistant-drive = { path = "../../libraries/python/assistant-drive", editable = true }
assistant-extensions = { path = "../../libraries/python/assistant-extensions", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
