[project]
name = "explorer-assistant"
version = "0.1.0"
description = "A python Semantic Workbench OpenAI assistant for exploring capabilities."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepmerge>=2.0",
    "html2docx>=1.6.0",
    "markdown>=3.6",
    "openai>=1.3.9",
    "content-safety>=0.1.0",
    "openai-client>=0.1.0",
    "assistant-extensions[attachments]>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[tool.uv]
package = true

[tool.uv.sources]
content-safety = { path = "../../libraries/python/content-safety/", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }
assistant-drive = { path = "../../libraries/python/assistant-drive", editable = true }
assistant-extensions = { path = "../../libraries/python/assistant-extensions", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]
