[project]
name = "assistant"
version = "0.1.0"
description = "An assistant that will guide users through a conversation towards a specific goal."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepmerge>=2.0",
    "docx2txt>=0.8",
    "html2docx>=1.6.0",
    "markdown>=3.6",
    "openai>=1.3.9",
    "pdfplumber>=0.11.2",
    "tiktoken>=0.7.0",
    "semantic-workbench-assistant>=0.1.0",
    "content-safety>=0.1.0",
    "semantic-kernel>=1.11.0",
    "guided-conversation>=0.1.0",
    "openai-client>=0.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
semantic-workbench-assistant = { path = "../../libraries/python/semantic-workbench-assistant", editable = true }
content-safety = { path = "../../libraries/python/content-safety/", editable = true }
guided-conversation = { path = "../../libraries/python/guided-conversation", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = ["venv", ".venv"]
