[project]
name = "assistant"
version = "0.1.0"
description = "Exploration of a python Semantic Workbench OpenAI assistant to help mine artifacts for ideas."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assistant-extensions[attachments]>=0.1.0",
    "content-safety>=0.1.0",
    "deepmerge>=2.0",
    "document-skill>=0.1.0",
    "guided-conversation>=0.1.0",
    "html2docx>=1.6.0",
    "markdown>=3.6",
    "openai-client>=0.1.0",
    "openai>=1.3.9",
    "posix-skill>=0.1.0",
    "prospector-skill>=0.1.0",
    "skill-library>=0.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
assistant-drive = { path = "../../libraries/python/assistant-drive", editable = true }
assistant-extensions = { path = "../../libraries/python/assistant-extensions", editable = true }
content-safety = { path = "../../libraries/python/content-safety/", editable = true }
document-skill = { path = "../../libraries/python/skills/skills/document-skill", editable = true }
guided-conversation = { path = "../../libraries/python/guided-conversation", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }
posix-skill = { path = "../../libraries/python/skills/skills/posix-skill", editable = true }
prospector-skill = { path = "../../libraries/python/skills/skills/prospector-skill", editable = true }
skill-library = { path = "../../libraries/python/skills/skill-library", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]
