[project]
name = "assistant"
version = "0.1.0"
description = "Exploration of a skill assistant library assistant (name to be updated)."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-contentsafety>=1.0.0",
    "azure-identity>=1.16.0",
    "azure-core[aio]>=1.30.0",
    "openai>=1.3.9",
    "semantic-workbench-assistant>=0.1.0",
    "content-safety>=0.1.0",
    "posix-skill>=0.1.0",
    "document-skill>=0.1.0",
    "openai-client>=0.1.0",
]

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.3.1", "pytest-asyncio>=0.23.8"]

[tool.uv.sources]
# If you copy this file to your project, you should verify the relative path to the following:
semantic-workbench-assistant = { path = "../../libraries/python/semantic-workbench-assistant", editable = true }
content-safety = { path = "../../libraries/python/content-safety", editable = true }
posix-skill = { path = "../../libraries/python/skills/skills/posix-skill", editable = true }
document-skill = { path = "../../libraries/python/skills/skills/document-skill", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
