[project]
name = "assistant"
version = "0.1.0"
description = "Exploration of a skill assistant library assistant (name to be updated)."
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-contentsafety>=1.0.0",
    "azure-core[aio]>=1.30.0",
    "azure-identity>=1.16.0",
    "content-safety>=0.1.0",
    "context>=0.1.0",
    # "document-skill>=0.1.0",
    "form-filler-skill>=0.1.0",
    "openai-client>=0.1.0",
    "openai>=1.3.9",
    "posix-skill>=0.1.0",
    "semantic-workbench-assistant>=0.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
content-safety = { path = "../../libraries/python/content-safety", editable = true }
context = { path = "../../libraries/python/context", editable = true }
# document-skill = { path = "../../libraries/python/skills/skills/document-skill", editable = true }
form-filler-skill = { path = "../../libraries/python/skills/skills/form-filler-skill", editable = true }
openai-client = { path = "../../libraries/python/openai-client", editable = true }
posix-skill = { path = "../../libraries/python/skills/skills/posix-skill", editable = true }
semantic-workbench-assistant = { path = "../../libraries/python/semantic-workbench-assistant", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]
