[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Example of a python Semantic Workbench assistant."
authors = ["Semantic Workbench Team"]
readme = "README.md"
packages = [{ include = "assistant" }]

[tool.poetry.dependencies]
python = "~3.11"
openai = "^1.3.9"

# If you copy this file to your project, you should verify the relative path to the following:
semantic-workbench-assistant = { path = "../../semantic-workbench/v1/service/semantic-workbench-assistant", develop = true, extras=["dev"]  }

black = { version = "^24.3.0", optional = true }
flake8 = { version = "^6.1.0", optional = true }

[tool.poetry.extras]
dev = ["black", "flake8"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.pyright]
exclude = ["venv", ".venv"]
