[project]
name = "mcp-server-bing-search"
version = "0.1.0"
description = "Searches the web and reads links"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown>=0.0.2",
    "mcp-extensions[llm,openai]>=0.1.0",
    "pendulum>=3.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = ["pyright>=1.1.389", "pytest>=8.0", "pytest-asyncio>=0.25"]

[tool.uv]
package = true

[tool.uv.sources]
mcp-extensions = { path = "../../libraries/python/mcp-extensions", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
mcp-server-bing-search = "mcp_server_bing_search.start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
