[project]
name = "mcp-server-bing-search"
version = "0.1.0"
description = "Searches the web and reads links"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.28,<1.0",
    "markitdown==0.1.1",
    "mcp-extensions[llm,openai]>=0.1.0",
    "pendulum>=3.0,<4.0",
    "pydantic>=2.10,<3.0",
    "tiktoken>=0.9.0,<1.0",
]

[dependency-groups]
dev = ["pyright>=1.1.389", "pytest>=8.0", "pytest-asyncio>=0.25"]

[tool.uv]
package = true

[tool.uv.sources]
mcp-extensions = { path = "../../libraries/python/mcp-extensions", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
mcp-server-bing-search = "mcp_server_bing_search.start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
