[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-bundle"
version = "0.1.0"
description = "Bundle for mcp-server-office and mcp-tunnel"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Semantic Workbench Team" }]
dependencies = [
    "mcp-server-filesystem-edit",
    "mcp-tunnel",
]

[tool.uv.sources]
mcp-server-filesystem-edit = { path = "../mcp-server-filesystem-edit", editable = true }
mcp-tunnel = { path = "../../libraries/python/mcp-tunnel", editable = true }

[project.scripts]
mcp-server-bundle = "mcp_server_bundle.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]
