[project]
name = "mcp-server-coder"
version = "0.1.0"
description = "An MCP server for coding-focused operations"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.1", "requests>=2.25"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.389"]
