[project]
name = "mcp-server-coder"
version = "0.1.0"
description = "An MCP server for coding-focused operations"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.1", "requests>=2.25"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-vv"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s | %(levelname)-7s | %(name)s | %(message)s"
testpaths = ["tests"]
asyncio_mode = "auto"

# Configure warnings handling
filterwarnings = [
    "error",
    "ignore: unclosed <socket.socket:ResourceWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.5.post1"
]
