[project]
name = "mcp-server-filesystem"
version = "0.1.0"
description = "Cross platform file system server"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.1"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3"]

[dependency-groups]
dev = ["pyright>=1.1.389"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
