[project]
name = "mcp-server-giphy"
version = "0.1.0"
description = "An MCP server integration with the GIPHY API"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.3.0", "requests>=2.25"]

[dependency-groups]
dev = ["pyright>=1.1.389"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
